<resources>
    <string name="app_name">MDP</string>
    <string name="analytics">Analytics</string>
    <string name="overview">Overview</string>
    <string name="thismonth">This Month</string>
    <string name="this_month">This Month</string>
    <string name="bills">Bills</string>
    <string name="settings">Settings</string>
    <string name="bill_title">Dinner with the boys</string>
    <string name="currency">MYR</string>
    <string-array name="expense_items">
        <item>Food and Restaurants  </item>
        <item>Transportation </item>
        <item>Bills &amp; Utilities</item>
    </string-array>

</resources>