<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Top navigation bar -->

    <androidx.cardview.widget.CardView
        android:id="@+id/add_bill_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="21dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Bill"
                android:textSize="24dp"
                android:textColor="#ffffff" />

            <!-- Date -->


        </LinearLayout>

        <!-- Plus sign on the right -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/plus" />
    </androidx.cardview.widget.CardView>


    <!-- RecyclerView for the list items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_bills"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_tab_bar"
        android:layout_below="@+id/add_bill_card"
        android:padding="8dp" />

    <!-- Bottom tab bar -->
    <RelativeLayout
        android:id="@+id/bottom_tab_bar"
        android:layout_width="412dp"
        android:layout_height="82dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- Navigation item 1 -->
        <LinearLayout
            android:id="@+id/nav_item_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="316dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/overview_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/overview"
                android:src="@drawable/overviewfalse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/overview" />

        </LinearLayout>

        <!-- Navigation item 2 -->

        <LinearLayout
            android:id="@+id/nav_item_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="194dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thismonth_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/thismonth"
                android:src="@drawable/thismonthfalse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/thismonth" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bills_nav"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="104dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bills_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bills"
                android:src="@drawable/billstrue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/bills" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:src="@drawable/settingsfalse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/settings" />

        </LinearLayout>




    </RelativeLayout>

</RelativeLayout>
