<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/add_transaction_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="21dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_title"
                android:textColor="#ffffff" />

            <!-- Date -->
            <TextView
                android:id="@+id/bill_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="01/01/2023" />

        </LinearLayout>

        <!-- Plus sign on the right -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:src="@drawable/plus" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView2"
        android:layout_width="377dp"
        android:layout_height="245dp"
        android:clickable="true"
        android:onClick="onCLick"
        app:layout_constraintBottom_toTopOf="@+id/transactions_cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:padding="16dp">

            <View
                android:id="@+id/donut_chart"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/chart" />

            <TextView
                android:id="@+id/analytics_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/donut_chart"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/donut_chart"
                android:text="Analytics"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="130dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@+id/analytics_text"
                app:srcCompat="@drawable/fullscreen"
                android:contentDescription="fullscreen" />


            <!-- Add more TextViews for other categories like 'Transportation', 'Bills & Utilities' etc. -->

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/transactions_cardView"
        android:layout_width="377dp"
        android:layout_height="245dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:padding="16dp">

            <View
                android:id="@+id/transactions_icon"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/transaction" />

            <TextView
                android:id="@+id/transactions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/transactions_icon"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/transactions_icon"
                android:text="Transactions"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:layout_toEndOf="@+id/transactions_text"
                app:srcCompat="@drawable/fullscreen" />


            <!-- Add more TextViews for other categories like 'Transportation', 'Bills & Utilities' etc. -->

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="412dp"
        android:layout_height="82dp"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- Navigation item 1 -->
        <LinearLayout
            android:id="@+id/nav_item_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="318dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/overview_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/overview"
                android:src="@drawable/overview_true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/overview" />

        </LinearLayout>

        <!-- Navigation item 2 -->

        <LinearLayout
            android:id="@+id/nav_item_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="194dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thismonth_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/thismonth"
                android:src="@drawable/thismonthfalse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/thismonth" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/bills_nav"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="104dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/bills_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bills"
                android:src="@drawable/billsfalse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/bills" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_item_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="onCLick"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_tabbar_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:src="@drawable/settingsfalse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/settings" />

        </LinearLayout>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>